<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list_league"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@android:drawable/ic_menu_search"/>

</RelativeLayout>