...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_below="@+id/rg_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

...
